--- a/outline.yml
+++ b/outline.yml
@@ -5,14 +5,15 @@
   - slide-030.md # - Basic Drupal architecture
   - slide-040.md #   - Entities
   - slide-050.md #   - Modern Drupal 7 site building
-  # - Custom LMS Drupal 7 architecture
+  - slide-060.md # - Custom LMS Drupal 7 architecture
   #   - Features
-  #   - Content strategy
+  - slide-080.md #   - Content strategy
   #   - Modules used
   #   - Custom development
   # - Building this with Drupal 8
   #   - Considerations
   #     - Module availability
+  #       - What to do when there is no D8 Version
   #     - Architectural differences
   # - What needs to change
   #   - Architecture
