--- a/outline.yml
+++ b/outline.yml
@@ -1,25 +1,24 @@
 ---
   - introduction.md
-  - slide-010.md # 01 - Outline
-  - slide-020.md # 02 - Prolog
-  # 03 - Why look at Drupal 8
-  - slide-060.md # 04 - Custom LMS Drupal 7 architecture
-  # 05   - Features
-  - slide-080.md # 06   - Content strategy
-  - slide-030.md # 07     - Basic Drupal architecture
-  - slide-040.md # 08       - Entities
-  - slide-050.md # 09   - Modules used & Modern Drupal 7 site building
-  # 10   - Custom development
-  # 11 - Considerations Building a LMS with Drupal 8
-  # 12   - Architectural differences
-  # 13   - UI Changes
-  # 14   - Module availability
-  # 15   - Specifically What needs to change
-  # 16     - Architecture
-  # 17     - Custom Development
-  # 18     - Content strategy
-  # 19 - Conclusion
-  # 20 - Appendix
+  - slide-010.md # 01 - Prolog - Outline
+  - slide-020.md # 02 - Why look at Drupal 8
+  - slide-030.md # 03 - Custom LMS Drupal 7 architecture
+  # 04   - Features
+  - slide-050.md # 05   - Content strategy
+  - slide-060.md # 06     - Basic Drupal architecture
+  - slide-070.md # 07       - Entities
+  - slide-080.md # 08   - Modules used & Modern Drupal 7 site building
+  # 09   - Custom development
+  # 10 - Considerations Building a LMS with Drupal 8
+  # 11   - Architectural differences
+  # 12   - UI Changes
+  # 13   - Module availability
+  # 14   - Specifically What needs to change
+  # 15     - Architecture
+  # 16     - Custom Development
+  # 17     - Content strategy
+  # 18 - Conclusion
+  # 19 - Appendix
   #
   # - introduction.md
   # - slide-010.md # - Outline
