--- a/outline.yml
+++ b/outline.yml
@@ -8,11 +8,12 @@
   - slide-060.md # 06     - Basic Drupal architecture
   - slide-070.md # 07       - Entities
   - slide-080.md # 08   - Modules used & Modern Drupal 7 site building
-  # 09   - Custom development
-  # 10 - Considerations Building a LMS with Drupal 8
+  - slide-090.md # 09   - Custom development
+  - slide-095.md # 095 - a word on blocks
+  - slide-100.md # 10 - Considerations Building a LMS with Drupal 8
   # 11   - Architectural differences
   # 12   - UI Changes
-  # 13   - Module availability
+  - slide-130.md  # 13   - Module availability
   # 14   - Specifically What needs to change
   # 15     - Architecture
   # 16     - Custom Development
