added slide 11 to the outline

--- a/outline.yml
+++ b/outline.yml
@@ -11,7 +11,7 @@
   - slide-090.md # 09   - Custom development
   - slide-095.md # 095 - a word on blocks
   - slide-100.md # 10 - Considerations Building a LMS with Drupal 8
-  # 11   - Architectural differences
+  - slide-110.md # 11   - Architectural differences
   # 12   - UI Changes
   - slide-130.md # 13   - Module availability
   - slide-140.md # 14   - Specifically What needs to change
