--- a/outline.yml
+++ b/outline.yml
@@ -8,8 +8,8 @@
   - slide-060.md # 06     - Basic Drupal architecture
   - slide-070.md # 07       - Entities
   - slide-080.md # 08   - Modules used & Modern Drupal 7 site building
+  - slide-085.md # 085  - A Word on blocks
   - slide-090.md # 09   - Custom development
-  - slide-095.md # 095 - a word on blocks
   - slide-100.md # 10 - Considerations Building a LMS with Drupal 8
   - slide-110.md # 11   - Architectural differences
   - slide-120.md # 12   - UI Changes
