--- a/outline.yml
+++ b/outline.yml
@@ -1,14 +1,15 @@
 ---
   - introduction.md
+  - clarity-slide.md
   - slide-010.md # 01 - Prolog - Outline
   - slide-020.md # 02 - Why look at Drupal 8
   - slide-030.md # 03 - Custom LMS Drupal 7 architecture
-  - slide-040.md # 04   - Features
-  - slide-050.md # 05   - Content strategy
-  - slide-060.md # 06     - Basic Drupal architecture
-  - slide-070.md # 07       - Entities
-  - slide-080.md # 08   - Modules used & Modern Drupal 7 site building
-  - slide-085.md # 085  - A Word on blocks
+  - slide-040.md # 04     - Basic Drupal architecture
+  - slide-050.md # 05       - Entities
+  - slide-060.md # 06   - Features
+  - slide-070.md # 07     - Modules used & Modern Drupal 7 site building
+  - slide-075.md # 075    - A Word on blocks
+  - slide-080.md # 08   - Content strategy
   - slide-090.md # 09   - Custom development
   - slide-100.md # 10 - Considerations Building a LMS with Drupal 8
   - slide-110.md # 11   - Architectural differences
