content is compiling now to get the notes in the correct spots

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
+    "front-matter": "^2.1.2",
     "js-yaml": "^3.8.2",
     "jstransformer-markdown-it": "^2.0.0",
+    "markdown-it": "^8.3.1",
     "pug": "^0.1.0"
   }
 }
