--- a/outline.yml
+++ b/outline.yml
@@ -19,7 +19,7 @@
   # 15     - Architecture
   # 16     - Content strategy
   - slide-170.md # 17     - Custom Development
-  # 18 - Conclusion
+  - slide-180.md # 18 - Conclusion
   # 19 - Appendix
   #
   # - introduction.md
