--- a/outline.yml
+++ b/outline.yml
@@ -3,9 +3,10 @@
     title: re-architecting with drupal 8
     author: Frank Robert Anderson
   slides:
+    - title.md
+    - slide-010.md # 01 - Prolog - Outline
     - introduction.md
     - clarity-slide.md
-    - slide-010.md # 01 - Prolog - Outline
     - slide-020.md # 02 - Why look at Drupal 8
     - slide-030.md # 03 - Custom LMS Drupal 7 architecture
     - slide-040.md # 04     - Basic Drupal architecture
