last pass before presentation

--- a/outline.yml
+++ b/outline.yml
@@ -25,6 +25,8 @@
     # 16     - Content strategy
     - slide-170.md # 17     - Custom Development
     - slide-180.md # 18 - Conclusion
+    - sprint.md
+    - feedback.md
   # 19 - Appendix
   #
   # - introduction.md
