--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "compile": "node index.js && cp -r content node_modules/reveal.js/ && cp index.html node_modules/reveal.js/ && cp -r theme node_modules/reveal.js/",
     "start": "cd node_modules/reveal.js/ && yarn start; cd ../..",
     "back": "cd ../..",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "yarn compile && node node_modules/.bin/http-serve node_modules/reveal.js/"
   },
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
     "front-matter": "^2.1.2",
+    "http-serve": "^1.0.1",
     "js-yaml": "^3.8.2",
     "jstransformer-markdown-it": "^2.0.0",
     "markdown-it": "^8.3.1",
     "markdown-it-container": "^2.0.0",
     "markdown-it-deflist": "^2.0.1",
     "pug": "^0.1.0",
-    "http-serve": "^1.0.1",
     "reveal.js": "^3.6.0"
   }
 }
