added the how stuff works stack

--- a/outline.yml
+++ b/outline.yml
@@ -221,7 +221,8 @@
       file: outline.md
 
   # Body.
-    - how does a vui work
+    - how does a vui work:
+      file: howitworks.md
     - architecture high level
     - technology
     - architechture low level
