--- a/outline.yml
+++ b/outline.yml
@@ -231,8 +231,8 @@
       file: opennlpdetail.md
     - technology:
       file: technology.md
-    - architechture low level:
-      oldfile: architechurelowlevel.md
+    # - architechture low level:
+    #   file: architechurelowlevel.md
     - vui design:
       file: design.md
 
